--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-
-.name{
-  background: wheat;
+.title{
+  background: #dede2e;
   text-align: center;
-  color: #592459;
+  color: deepskyblue;
 }
 
 .App {
