--- a/src/components/car/Car.module.css
+++ b/src/components/car/Car.module.css
@@ -1,14 +1,38 @@
 .carBlock{
     border: 1px solid;
+    border-radius: 5px;
     display: flex;
+    text-align: center;
+    flex-direction: column;
     justify-content: space-around;
+    background: yellow;
+    height: 300px;
 }
 .car{
     display: inline-block;
     width: 250px;
+    color: blue;
+    font-size: 20px;
+    font-weight: bold;
+
+}
+.btn{
+    background: black;
+    width: 60%;
+    color: red;
+    font-size: 16px;
+    justify-content: center;
+    border-radius: 5px;
+}
+.btn:hover{
+    cursor: pointer;
 }
 .btnBlock{
+    margin-left: 33%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: end;
+    width: 60%;
+    gap: 10px;
+
 }
