--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+
 .App {
   text-align: center;
+  background: #001aff;
 }
 
 .App-logo {
@@ -14,7 +16,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,7 +26,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #001aff;
 }
 
 @keyframes App-logo-spin {
