--- a/src/components/Car/car.module.css
+++ b/src/components/Car/car.module.css
@@ -1,21 +1,35 @@
-.Header{
-    height: 100px;
+
+.car{
     background: blue;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    width: 270px;
+    border: 1px solid;
+    padding: 5px;
+    border-radius: 5px;
 }
-.Header h1 {
+.car input {
+    margin: 10px;
+    padding: 4px;
+    border: 1px yellow solid;
+    border-radius: 10px;
+    transition: background .2s ease-in-out;
+}
+
+.text{
+    padding-left: 25%;
     color: yellow;
-    letter-spacing: 6px;
-    font-size: 45px;
+    font-style: italic;
     font-weight: bold;
-    font-style: oblique
 }
-.Header img {
-    height: 95px;
-    background: blue;
+.img{
+    padding-left: 13%;
+    width: 200px;
+    height: 150px;
 }
+.btns{
+    display: flex;
+    justify-content: space-between;
+}
+
 .btns button {
     align-items: center;
     appearance: none;
@@ -24,11 +38,11 @@
     border-width: 0;
     box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     box-sizing: border-box;
-    color: #36395A;
+    color: #0e010e;
     cursor: pointer;
     display: inline-flex;
     font-family: "JetBrains Mono", monospace;
-    height: 48px;
+    height: 30px;
     justify-content: center;
     line-height: 1;
     list-style: none;
@@ -49,15 +63,15 @@
 }
 
 .btns button:hover{
-     box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-     transform: translateY(-2px);
- }
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+}
 
 .btns button:focus{
-     box-shadow: #D6D6E7 0 0 0 2px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
- }
+    box-shadow: #D6D6E7 0 0 0 2px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
 
 .btns button:active{
-     box-shadow: #D6D6E7 0 3px 7px inset;
-     transform: translateY(2px);
- }
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
+}
